# sec-rag-pipeline

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.venv311/: pyvenv.cfg
api/: main.py
chunking/: splitter.py
core/: config.py  models.py
docs/: CDA_MARKDOWN_DESIGN_DECISIONS.md  DECISION_LOG.md  EXEC_SUMMARY.md  EXTRACT_OUTSTANDING_EQUITY_WORKFLOW.md  PIPELINE_AGENT_HANDOFF.md  README.md  RESEARCHER_GUIDE.md  RUN_BATCH50_WORKFLOW.md  TECHNICAL_AUDIT.md  audit_and_lessons.md  branch_audit.md  core_functions.md  data_quality_root_causes.md
fixtures/: README.md  client_input.csv  eval_queries.json  manifest.csv  sp500_download_log.csv  sp500_manifest.csv  sp500_manifest_errors.csv
generation/: prompt_builder.py
indexing/: embedder.py
ingestion/: cda_extractor.py  cda_markdown_extractor.py  comp_table_extractor.py  critical_section_labeler.py  downloader.py  edgar_downloader.py  edgar_folder_fetcher.py  html_parser.py  llm_comp_extractor.py  metadata_model.py  sec_chunker.py  sec_html_parser.py  sec_proxy_parser.py  section_extractor.py
notebooks/: 01_ingestion_audit.ipynb  02_chunking_audit.ipynb  03_ingest_parse_chunk.ipynb  04_batch_ingest.ipynb  04_retrieval_eval.ipynb
output/: chunks_cnob_m0.csv
retrieval/: hybrid.py
scripts/: __init__.py  batch_download.py  batch_ingest.py  build_sp500_manifest.py  check_sec2md_chunks.py  convert_raw_html_to_md.py  debug_data_quality.py  extract_outstanding_equity.py  ingest_from_folder_csv.py  merge_batches.py  run_batch50_key_results.py  (+7 more)
(+33 files in other folders)
