[tool.poetry]
name = "sec-rag-pipeline"
version = "0.1.0"
description = "SEC filing RAG pipeline: EDGAR → parse → chunk → embed → retrieve → generate"
authors = ["YaNa <yashar@example.com>"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
pgvector = "^0.3.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.2.0"
edgartools = "^3.0.0"
langchain = "^0.2.0"
langchain-text-splitters = "^0.2.0"
voyageai = "^0.2.3"
qdrant-client = "^1.9.0"
openai = "^1.30.0"
tiktoken = "^0.7.0"
rank-bm25 = "^0.2.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
mypy = "^1.10.0"
ruff = "^0.4.0"
ipykernel = "^6.29.0"
jupyterlab = "^4.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
